@@ -584,6 +584,7 @@ class Nikola(object):
             'SOCIAL_BUTTONS_CODE': '',
             'SITE_URL': 'https://example.com/',
             'PAGE_INDEX': False,
+            'SECTION_PATH': '',
             'STRIP_INDEXES': False,
             'SITEMAP_INCLUDE_FILELESS_DIRS': True,
             'TAG_PATH': 'categories',
@@ -673,6 +674,7 @@ class Nikola(object):
                                       'TAGS_INDEX_PATH',
                                       'CATEGORY_PATH',
                                       'CATEGORIES_INDEX_PATH',
+                                      'SECTION_PATH',
                                       'INDEX_PATH',
                                       'RSS_PATH',
                                       'AUTHOR_PATH',
