@@ -98,7 +98,7 @@ link://section_index_rss/cars => /cars/rss.xml""",
 
     def get_path(self, section, lang, dest_type='page'):
         """Return a path for the given classification."""
-        result = [_f for _f in [section] if _f]
+        result = [_f for _f in [self.site.config['SECTION_PATH'](lang), section] if _f]
         if dest_type == 'rss':
             return result + ['rss.xml'], 'never'
         return result, 'always'
