@@ -13,6 +13,8 @@ Math support changes
 Features
 --------
 
+* Add ``SECTION_PATH`` support to move the section indexes to a
+  user-defined location (Issue #2738)
 * Add a list of template variables to documentation (Issues #2328,
   #2712, #2259) and update the theming reference (Issue #2259)
 * Add ``{post_title}`` tag for Read More links (Issue #2709)
